# tic-tac-toe

./: .gitignore  Makefile.am  README.md  configure.ac
src/: Makefile.am  main.c
